Fix up some layout issues and add excerpts and categories

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -49,7 +49,7 @@ h4,
 
 h5,
 .h5 {
-	@apply text-lg;
+	@apply text-xl leading-tight;
 }
 
 h6,
@@ -58,15 +58,23 @@ h6,
 }
 
 .transform-slide-right {
-	transform: translateX(100vw);
+	transform: translateX(100%);
 }
 
 .transform-slide {
-	transform: translateX(0vw);
+	transform: translateX(0%);
+}
+
+.transform-scale-up:hover {
+	transform: scale(1.05);
 }
 
 .transition {
 	transition: all 0.3s ease;
+
+	&-quick {
+		transition: all 0.2s ease;
+	}
 }
 
 @tailwind utilities;
